intel_extreme: Fixed virtualscreen setup, ticket #17261